fixed a bleed through active press on mobile

--- a/src/components/MenuOptions/MenuOptions.css
+++ b/src/components/MenuOptions/MenuOptions.css
@@ -28,6 +28,10 @@
     background-color: rgba(0,0,255,.5);
 }
 
+.leftButton:active,.rightButton:active{
+    background-color: rgba(0,0,255,.25)
+}
+
 .rightButton{
     color: lightgrey;
     background-color:transparent;
